# plasma-share-uploader

./: .gitignore  CMakeLists.txt  IDEAS.md  LICENSE  README.md  targets.json  targets.sample.json
arch/: PKGBUILD
data/targets.d/: catbox.json
data/targets.d/examples/: pomf.json  vgyme.json
scripts/: generate_targets.py
src/: CMakeLists.txt  constraintmatcher.cpp  constraintmatcher.h  preuploadprocessor.cpp  preuploadprocessor.h  runtimeplugin.cpp  runtimeplugin.json  shareinpututils.cpp  shareinpututils.h  sharejob.cpp  sharejob.h  targetconfigparser.cpp  targetconfigparser.h  targetconfigvalidator.cpp  targetconfigvalidator.h  targetcoreconfigparser.cpp  targetcoreconfigparser.h  targetdefinition.cpp  targetdefinition.h  targetdiagnostic.h  targeticonprovider.cpp  targeticonprovider.h  targetpickerdialog.cpp  targetpickerdialog.h  targetpreuploadconfigparser.cpp  targetpreuploadconfigparser.h  targetregistry.cpp  targetregistry.h  targetrequestconfigparser.cpp  targetrequestconfigparser.h  targetresponseconfigparser.cpp  targetresponseconfigparser.h  targetuploader.cpp  targetuploader.h  targetuploader_utils.cpp  targetuploader_utils.h
targets/: catbox.json  uguu.json
targets/examples/: chevereto.json  transfer-sh.json
tests/: CMakeLists.txt
tests/cpp/: httpcaptureserver.cpp  httpcaptureserver.h  test_preuploadprocessor.cpp  test_shareinpututils.cpp  test_sharejob.cpp  test_targetregistry.cpp  test_targetuploader.cpp  test_targetuploader_utils.cpp  testutils.h
tests/fixtures/scripts/: append_text.py  copy_with_prefix.py  fail.py  sleep.py
tests/python/: test_generate_targets.py
